--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "express-session": "^1.15.3",
     "mongoose": "^4.11.1",
     "mustache": "^2.3.0",
     "mustache-express": "^1.2.5"
